# MattePro

./: .eslintrc.json  .gitignore  .gitmodules  .parcelrc  CMakeLists.txt  package-lock.json  package.json
lib/: main.cpp
lib/utilities/: UxpAddon.h
src/: alerts.ts  api.ts  index.html  index.less  index.ts  matte.ts  types.ts  utils.ts
static/: manifest.json
